# hs-fizzbuzz

./: README.md  hs-fizzbuzz.cabal
app/: Main.hs
src/: FizzBuzz.hs
